Update and rename 2index.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				
 				<div class="menubar">
 					<ul class="menu">
-						<li class="selected"><a href="2index.html">Главная</a></li>
+						<li class="selected"><a href="index.html">Главная</a></li>
 						<li><a href="films.html">Фильмы</a></li>
 						<li><a href="#">Сериалы</a></li>
 						<li><a href="rating.html">Рейтинг фильмов</a></li>
